--- a/cloud-layer-starters/hbase-spring-boot-starter/hbase-starter-core/pom.xml
+++ b/cloud-layer-starters/hbase-spring-boot-starter/hbase-starter-core/pom.xml
@@ -7,9 +7,10 @@
         <groupId>io.cloud.layer</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
-
+    <packaging>jar</packaging>
     <artifactId>hbase-starter-core</artifactId>
-
+    <description>接口定义</description>
 
 </project>
