--- a/cloud-layer-starters/hbase-spring-boot-starter/hbase-starter-core-impl/pom.xml
+++ b/cloud-layer-starters/hbase-spring-boot-starter/hbase-starter-core-impl/pom.xml
@@ -2,34 +2,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <parent>
+        <artifactId>hbase-spring-boot-starter</artifactId>
         <groupId>io.cloud.layer</groupId>
-        <artifactId>cloud-layer-dependencies</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../cloud-layer-dependencies</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
-    <artifactId>cloud-layer-tests</artifactId>
-    <description>测试项目</description>
-
-    <properties>
-        <java.version>11</java.version>
-    </properties>
-
-    <modules>
-        <module>cloud-layer-security-test</module>
-        <module>cloud-layer-swagger-test</module>
-        <module>hbase-spring-boot-starter-test</module>
-    </modules>
+    <packaging>jar</packaging>
+    <artifactId>hbase-starter-core-impl</artifactId>
+    <description>hbase相关操作的实现</description>
 
     <dependencies>
         <dependency>
             <groupId>io.cloud.layer</groupId>
-            <artifactId>cloud-layer-bean</artifactId>
+            <artifactId>hbase-starter-core</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
+
 
 </project>
