hbase-starter：配置方式+测试

--- a/cloud-layer-core/pom.xml
+++ b/cloud-layer-core/pom.xml
@@ -17,6 +17,7 @@
     <modules>
         <module>cloud-layer-utils</module>
         <module>cloud-layer-bean</module>
+        <module>cloud-layer-spring</module>
     </modules>
 
     <dependencies>
