--- a/cloud-layer-starters/hbase-spring-boot-starter/pom.xml
+++ b/cloud-layer-starters/hbase-spring-boot-starter/pom.xml
@@ -9,15 +9,24 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
     <artifactId>hbase-spring-boot-starter</artifactId>
 
-    <modules>
-        <module>hbase-starter-core</module>
-        <module>hbase-starter-core-impl</module>
-    </modules>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure-processor</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.cloud.layer</groupId>
+            <artifactId>cloud-layer-spring</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-client</artifactId>
