--- a/cloud-layer-tests/hbase-spring-boot-starter-test/pom.xml
+++ b/cloud-layer-tests/hbase-spring-boot-starter-test/pom.xml
@@ -7,9 +7,32 @@
         <groupId>io.cloud.layer</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
+    <modelVersion>4.0.0</modelVersion>
+    <packaging>jar</packaging>
     <artifactId>hbase-spring-boot-starter-test</artifactId>
+    <description>hbase starter测试</description>
+
+    <dependencies>
+        <dependency>
+            <groupId>io.cloud.layer</groupId>
+            <artifactId>hbase-spring-boot-starter</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-undertow</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+    </dependencies>
+
 
 
 </project>
