--- a/cloud-layer-starters/hbase-spring-boot-starter/pom.xml
+++ b/cloud-layer-starters/hbase-spring-boot-starter/pom.xml
@@ -28,9 +28,9 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.hbase</groupId>
-            <artifactId>hbase-client</artifactId>
-            <version>2.0.1</version>
+            <groupId>io.cloud.layer</groupId>
+            <artifactId>cloud-layer-hbase-dependencies</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
