--- a/cloud-layer-starters/swagger-spring-boot-starter/pom.xml
+++ b/cloud-layer-starters/swagger-spring-boot-starter/pom.xml
@@ -16,20 +16,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-models</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-spring-web</artifactId>
+            <groupId>io.cloud.layer</groupId>
+            <artifactId>cloud-layer-swagger-dependencies</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>io.cloud.layer</groupId>
