--- a/cloud-layer-dependencies/cloud-layer-hbase-dependencies/pom.xml
+++ b/cloud-layer-dependencies/cloud-layer-hbase-dependencies/pom.xml
@@ -21,6 +21,12 @@
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-client</artifactId>
             <version>${hbase-client.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>jdk.tools</groupId>
+                    <artifactId>jdk.tools</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
