--- a/cloud-layer-dependencies/cloud-layer-zuul-dependencies/pom.xml
+++ b/cloud-layer-dependencies/cloud-layer-zuul-dependencies/pom.xml
@@ -14,6 +14,7 @@
 
     <properties>
         <spring-cloud-starter-netflix-zuul.version>2.1.1.RELEASE</spring-cloud-starter-netflix-zuul.version>
+        <groovy-all.version>1.7.6</groovy-all.version>
     </properties>
 
     <dependencies>
@@ -21,6 +22,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
             <version>${spring-cloud-starter-netflix-zuul.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>${groovy-all.version}</version>
         </dependency>
     </dependencies>
 
