--- a/cloud-layer-tests/pom.xml
+++ b/cloud-layer-tests/pom.xml
@@ -22,6 +22,7 @@
         <module>cloud-layer-security-test</module>
         <module>cloud-layer-swagger-test</module>
         <module>hbase-spring-boot-starter-test</module>
+        <module>cloud-layer-agent-test</module>
     </modules>
 
 </project>
