--- a/cloud-layer-starters/mqtt-spring-boot-starter/pom.xml
+++ b/cloud-layer-starters/mqtt-spring-boot-starter/pom.xml
@@ -2,17 +2,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <parent>
-        <artifactId>netty-spring-boot-starter</artifactId>
+        <artifactId>cloud-layer-starters</artifactId>
         <groupId>io.cloud.layer</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
-    <artifactId>netty-core-spring-boot-starter</artifactId>
-    <description>基础的、核心的、公用的 netty 模块</description>
+    <artifactId>mqtt-spring-boot-starter</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.34.Final</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
