--- a/cloud-layer-tests/cloud-layer-other-test/pom.xml
+++ b/cloud-layer-tests/cloud-layer-other-test/pom.xml
@@ -3,15 +3,26 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>netty-spring-boot-starter</artifactId>
+        <artifactId>cloud-layer-tests</artifactId>
         <groupId>io.cloud.layer</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
-    <artifactId>netty-server-spring-boot-starter</artifactId>
-    <description>netty 服务器</description>
+    <artifactId>cloud-layer-other-test</artifactId>
+
+    <properties>
+        <disruptor.version>3.4.2</disruptor.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>${disruptor.version}</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
