--- a/cloud-layer-starters/netty-spring-boot-starter/pom.xml
+++ b/cloud-layer-starters/netty-spring-boot-starter/pom.xml
@@ -10,15 +10,21 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
     <artifactId>netty-spring-boot-starter</artifactId>
     <description>netty相关的</description>
 
-    <modules>
-        <module>netty-core-spring-boot-starter</module>
-        <module>netty-server-spring-boot-starter</module>
-        <module>netty-mc-spring-boot-starter</module>
-    </modules>
+    <properties>
+        <netty-all.version>4.1.34.Final</netty-all.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>${netty-all.version}</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
